[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-files = "0.6.2"

env_logger = "0.10.0"
log = "0.4.17"
mysql = "23.0.1"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.15", features = ["full"] }

serde = {version="1.0.154", features=["derive"]}
serde_json = "1.0.94"
rand = "0.8.4"
chrono = "0.4.24"
actix-cors = "0.6.4"